Pre-Release [7] - Added Statsupdate to MySQL

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,3 +2,7 @@ name: BetterStats
 author: gold.ly, CRAFTagain
 version: 0.0
 main: ly.gold.betterstats.main.BetterStats
+commands:
+  update:
+    name: update
+    description: Updatet deine Stats.
